# Bayesian_Memory_Ladder_BML

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml  requirements.txt
artifacts/0115/: run_0115_planck_polychord_LCDM_evidence.stats  run_0115_planck_polychord_LCDM_evidence_equal_weights.txt
artifacts/0116/: reject_audit_0116_snapshot_latest.json  run_0116_planck_polychord_memory_restricted_v2_evidence.stats  run_0116_planck_polychord_memory_restricted_v2_evidence_equal_weights.txt
artifacts/0118/: run_0118_planck_polychord_memory_full_controlled_evidence.stats  run_0118_planck_polychord_memory_full_controlled_evidence_equal_weights.txt
configs/: benchmark_bml_speed.yml  run_0111_planck_mcmc_dop853_guarded.yml  run_0112_planck_mcmc_LCDM_baseline.yml  run_0114_planck_mcmc_memory_restricted_v2.yml  run_0115_planck_polychord_LCDM_evidence.yml  run_0116_planck_polychord_memory_restricted_v2_evidence.yml  run_0118_planck_polychord_memory_full_controlled_evidence.yml
docs/: EXCLUDED_RUNS.md  MANIFEST.sha256  REPLY_FIGURES.md  REPRODUCIBILITY.md
results/snapshots/: SNAPSHOT_2026-04-27.md  evidence_snapshot_2026-04-27.csv
scripts/: benchmark_bml_speed.py
scripts/reply/: 01_build_evidence_ledger.py  02_plot_evidence_comparison.py  03_plot_kstar_posterior.py  04_plot_numerical_audit.py  05_plot_h0_comparison.py  _paths.py  build_reply_bundle.sh  reject_audit_0116_public.py
src/bml/: boltzmann_camb.py  boltzmann_class.py  checks.py  cobaya_bml_theory.py  cobaya_powerlaw_pk.py  cobaya_zero_like.py  config.py  logging_utils.py  memory_solver.py  (+5 more)
(+3 files in other folders)
